# k8stools

./: README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: unit-tests.yml
src/k8stools/: __init__.py  k8s_tools.py  mcp_client.py  mcp_server.py
tests/: test_k8s_tools.py  test_k8s_tools_realk8s.py  test_mcp_client.py  test_mock_tools.py
