[project]
name = "k8stools"
version = "0.1.0"
description = "Tools and an MCP server for building Kubernetes agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kubernetes>=33.1.0",
    "mcp>=1.12.0",
]

[dependency-groups]
dev = [
    "Pygments>=2.19",
    "pytest>=8.4.1",
    "rich>=14.0.0",
]
